# rust_optics

./: .gitignore  Cargo.toml  README.md  textures.toml
data/: config.toml
examples/: forward_tracing.rs  reverse_tracing.rs
src/: aperture.rs  film.rs  lens.rs  lens_sampler.rs  lib.rs  lightfield.rs  main.rs  math.rs  misc.rs  spectrum.rs  tonemap.rs  trace.rs  vec2d.rs
src/dev/: mod.rs  tonemap.rs
src/dev/parsing/: curves.rs  mod.rs  texture.rs
src/parse/: curves.rs  mod.rs  texture.rs
subcrate/: Cargo.toml
subcrate/src/: film.rs  lib.rs
subcrate/src/parsing/: curves.rs  texture.rs
