[package]
name = "rust_optics"
version = "0.2.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2021"

[features]
dev = ["line_drawing", "image"]


[dependencies]
itertools = "~0.13"
math = { git = "https://github.com/gillett-hernandez/rust_cg_math" }
minifb = "~0.27"
nalgebra = "~0.32"
num_cpus = "~1.16"
ordered-float = "~4.2"
paw = "~1.0"
rand = "~0.8"
rayon = "~1.10"
serde = { version = "~1.0", features = ["derive"] }
toml = "~0.8"
image = { version = "~0.25", optional = true }
line_drawing = { version = "~1.0", optional = true }

[dev-dependencies]
crossbeam = "~0.8"
structopt = { version = "~0.3", features = ["paw"] }
linefeed = "~0.6"
egui = "~0.27"
eframe = "~0.27"
egui_extras = "~0.27"
line_drawing = "~1.0"


[build-dependencies]
serde = { version = "~1.0", features = ["derive"] }

[lib]
name = "optics"
path = "src/lib.rs"

[[example]]
name = "forward_tracing"
required-features = ["dev"]

[[example]]
name = "reverse_tracing"
required-features = ["dev"]
