[package]
name = "subcrate"
version = "0.1.0"
authors = ["Gillett Hernandez <gillett.hernandez@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.24.3"
itertools = "0.10.3"
line_drawing = "1.0.0"
math =  { tag = "v0.3.0", git = "https://github.com/gillett-hernandez/rust_cg_math" }
minifb = "0.23.0"
nalgebra = "0.31.1"
num_cpus = "1.13.1"
ordered-float = "3.0.0"
packed_simd = { version = "0.3.8", package = "packed_simd_2" }
paw = "1.0"
rand = "0.8.5"
rayon = "1.5.3"
serde = { version = "1.0.140", features = ["derive"] }
structopt = { version = "0.3.26", features = [ "paw" ] }
toml = "0.5.9"

[build-dependencies]
serde = { version = "1.0.140", features = ["derive"] }

[profile.dev]
opt-level = 3
panic='abort'
debug=true

[profile.test]
opt-level = 0
